# plover_swedish_palantype

./: README.rst  setup.cfg
Swedish theory/: .~lock.Consonant representations.xlsx#  Consonant representations.xlsx  Konsonantöversättning.xlsx  TODO.txt  Vowel representations.xlsx
plover_palantype_swedish/: system.py
plover_palantype_swedish/dictionaries/: LICENSE.txt  swedish_autogen.json  swedish_autogen_c.json  swedish_autogen_c_v4.json  swedish_autogen_v4.json  swedish_sample.json  user.json  user_english.json  user_fingerspelling_and_numbers.json  user_swedish.json
