[metadata]
name = plover_palantype_swedish
version = 0.0.1
description = Palantype support for Plover, adapted for use in Swedish
long_description = file: README.rst
author = Max Helmisaari
author_email = maxhel95@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/stenoshrink/plover_swedish_palantype
classifiers =
	Development Status :: Design
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev1
packages =
	plover_palantype_swedish

[options.entry_points]
plover.system =
  Swedish Palantype = plover_palantype_swedish.system
plover.machine =
  Palantype = plover_palantype_swedish.machine:Palantype
